--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 </li>
 <li><a href="#how-to-teach">6. How to teach</a>
 <ul class="sectlevel2">
-<li><a href="#how-to-teach--user-the-internet">6.1. Use the Internet</a></li>
+<li><a href="#how-to-teach--use-the-internet">6.1. Use the Internet</a></li>
 <li><a href="#how-to-teach--give-answers">6.2. Give answers</a>
 <ul class="sectlevel3">
 <li><a href="#how-to-teach--give-examples">6.2.1. Give examples</a></li>
@@ -1929,7 +1929,7 @@
 </ul>
 </div>
 <div class="paragraph">
-<p>Once a person has that, they can <a href="#write-free-books-to-get-famous-website">learn, teach</a> and create whatever they want. Or play <a href="#the-best-video-game-content-of-all-time">video games</a> all day long if they wish.</p>
+<p>Once a person has that, they can <a href="#write-free-books-to-get-famous-website">learn</a> and create whatever they want. Or play <a href="#the-best-video-game-content-of-all-time">video games</a> all day long if they wish.</p>
 </div>
 <div class="paragraph">
 <p><a href="https://en.wikipedia.org/wiki/Basic_income_pilots">Ciro santilli will not live to see this</a>, and is content with helping it happen faster by increasing the efficiency of the world as. And having at least two well educated kids to carry on the project after he dies :-)</p>
@@ -2023,13 +2023,13 @@
 <p>It is the European <a href="https://en.wikipedia.org/wiki/Tower_of_Babel">Tower of Babel</a>.</p>
 </div>
 <div class="paragraph">
-<p>The <a href="https://en.wikipedia.org/wiki/Linguistic_relativity">Sapir–Whorf hypothesis</a> is bullshit outside of poetry, and the ending of <a href="https://en.wikipedia.org/wiki/Arrival_(film)">Arrival (2016)</a> makes one want to puke, where learning a language changes not only your brain, but also Ciro&#8217;s precious <a href="#physics">"laws" of Physics</a>!</p>
+<p>The <a href="https://en.wikipedia.org/wiki/Linguistic_relativity">Sapir–Whorf hypothesis</a> is bullshit outside of poetry, and the ending of <a href="https://en.wikipedia.org/wiki/Arrival_(film)">Arrival (2016)</a> makes one want to puke, where learning a language changes not only your brain, but also Ciro&#8217;s precious <a href="#physics">laws</a>!</p>
 </div>
 <div class="paragraph">
-<p>Much more likely are xref:https://en.wikipedia.org/wiki/To_Serve_Man_(The_Twilight_Zone)[To Serve Man] / <a href="https://en.wikipedia.org/wiki/A_Small_Talent_for_War">A Small Talent for War</a> events!</p>
+<p>Much more likely are <a href="https://en.wikipedia.org/wiki/To_Serve_Man_(The_Twilight_Zone)">To Serve Man</a> / <a href="https://en.wikipedia.org/wiki/A_Small_Talent_for_War">A Small Talent for War</a> events!</p>
 </div>
 <div class="paragraph">
-<p>Remember that those ideas come from a person who <a href="#ciro-santilli-s-natural-languages-skills">speaks 3.5 languages in 2019</a>, and see absolutely no practical difference between them.</p>
+<p>Remember that those ideas come from a person who <a href="#ciro-santillis-natural-languages-skills">speaks 3.5 languages in 2019</a>, and see absolutely no practical difference between them.</p>
 </div>
 <div class="paragraph">
 <p>One interesting anecdote is that Ciro met his wife in French, and talking to her primarily in English feels really weird, so language does matter in love.</p>
@@ -2437,16 +2437,19 @@ CNAME   www     cirosantilli.github.io  1 Hour</pre>
 <div class="sect3">
 <h4 id="download-ciros-website-for-offline-viewing"><a class="anchor" href="#download-ciros-website-for-offline-viewing"></a><a class="link" href="#download-ciros-website-for-offline-viewing">1.7.9. Download Ciro&#8217;s website for offline viewing</a></h4>
 <div class="paragraph">
-<p>Not perfect yet, but doing some progressl, currently <code>xref2</code> links resolve to <code>.html</code> correctly:</p>
+<p>Not perfect yet, but doing some progress, currently <code>xref2</code> links resolve to <code>.html</code> correctly:</p>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>CIROSANTILLI_COM_XREF2_LOCAL=1 ./build
+<pre>CIROSANTILLI_COM_XREF2_SERVERLESS=1 ./build
 xdg-open _site/index.html</pre>
 </div>
 </div>
 <div class="paragraph">
 <p><a href="https://stackoverflow.com/questions/26778329/running-jekyll-generated-files-without-jekyll-local-server" class="bare">https://stackoverflow.com/questions/26778329/running-jekyll-generated-files-without-jekyll-local-server</a></p>
+</div>
+<div class="paragraph">
+<p>TODO: download all resources. Images are already half way because basically all already go through <code>image2</code>. But not sure I can mark external CSS and JavaScript easily on the HTML.</p>
 </div>
 </div>
 </div>
@@ -2616,7 +2619,7 @@ xdg-open _site/index.html</pre>
 <p><a href="https://en.wikipedia.org/wiki/George_M._Church">George M. Church</a> "[We] hope that whatever problems… contributed to your lack of success… at Duke will not keep you from a successful pursuit of a productive career." Lol</p>
 </li>
 <li>
-<p><a href="https://en.wikipedia.org/wiki/Freeman_Dyson">Freeman Dyson</a>: <a href="https://www.youtube.com/watch?v=DzC1IRYN_Ps">Freeman Dyson - Why I don&#8217;t like the PhD system (95/157)</a> by <a href="#web-of-storieswes">[web-of-storieswes]</a> published on Sep 6, 2016</p>
+<p><a href="https://en.wikipedia.org/wiki/Freeman_Dyson">Freeman Dyson</a>: <a href="https://www.youtube.com/watch?v=DzC1IRYN_Ps">Freeman Dyson - Why I don&#8217;t like the PhD system (95/157)</a> by <a href="#web-of-stories">Web of Stories</a> published on Sep 6, 2016</p>
 </li>
 </ul>
 </div>
@@ -3352,7 +3355,7 @@ xdg-open _site/index.html</pre>
 <p><a href="https://en.wikipedia.org/wiki/Photomultiplier_tube" class="bare">https://en.wikipedia.org/wiki/Photomultiplier_tube</a></p>
 </div>
 <div class="paragraph">
-<p>Feynman likes them, here he describes the tube one: <a href="https://youtu.be/eLQ2atfqk2c?t=2198" class="bare">https://youtu.be/eLQ2atfqk2c?t=2198</a> "QED: Photons&#8201;&#8212;&#8201;Corpuscles of Light&#8201;&#8212;&#8201;Richard Feynman (1/4)" (University of Auckland, 1979) by "ReasonPublic".</p>
+<p>Feynman likes them, here he describes the tube one: <a href="https://youtu.be/eLQ2atfqk2c?t=2198" class="bare">https://youtu.be/eLQ2atfqk2c?t=2198</a> "QED: Photons -- Corpuscles of Light -- Richard Feynman (1/4)" (University of Auckland, 1979) by "ReasonPublic".</p>
 </div>
 <div class="paragraph">
 <p>It uses the <a href="#photoelectric-effect">Photoelectric effect</a> multiple times to produce a chain reaction.</p>
@@ -3645,7 +3648,7 @@ xdg-open _site/index.html</pre>
 <p>Stuff that is beautiful but useless because it does not make food or houses cheaper.</p>
 </div>
 <div class="paragraph">
-<p>Or from <a href="#ciro-santilli-s-best-random-thoughts">[ciro-santilli-s-best-random-thoughts]</a>:</p>
+<p>Or from <a href="#ciro-santillis-best-random-thoughts">Ciro Santilli&#8217;s best random thoughts</a>:</p>
 </div>
 <div class="quoteblock">
 <blockquote>
@@ -3976,7 +3979,7 @@ xdg-open _site/index.html</pre>
 <div class="sect2">
 <h3 id="the-best-quotes-of-all-time"><a class="anchor" href="#the-best-quotes-of-all-time"></a><a class="link" href="#the-best-quotes-of-all-time">4.6. The best quotes of all time</a></h3>
 <div class="paragraph">
-<p>Ciro&#8217;s best quotes selected by no one other than Ciro can be found at: <a href="#ciro-santilli-s-best-random-thoughts">[ciro-santilli-s-best-random-thoughts]</a>.</p>
+<p>Ciro&#8217;s best quotes selected by no one other than Ciro can be found at: <a href="#ciro-santillis-best-random-thoughts">Ciro Santilli&#8217;s best random thoughts</a>.</p>
 </div>
 <div class="paragraph">
 <p>Related to technology:</p>
@@ -4287,7 +4290,7 @@ xdg-open _site/index.html</pre>
 <p>Customized website idea at: <a href="#write-free-books-to-get-famous-website">Write free books to get famous website</a>.</p>
 </div>
 <div class="sect2">
-<h3 id="how-to-teach--user-the-internet"><a class="anchor" href="#how-to-teach--user-the-internet"></a><a class="link" href="#how-to-teach--user-the-internet">6.1. Use the Internet</a></h3>
+<h3 id="how-to-teach--use-the-internet"><a class="anchor" href="#how-to-teach--use-the-internet"></a><a class="link" href="#how-to-teach--use-the-internet">6.1. Use the Internet</a></h3>
 <div class="paragraph">
 <p>If you give a course in a classroom, you reach 10 people (the others were sleeping).</p>
 </div>
@@ -4499,10 +4502,10 @@ xdg-open _site/index.html</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>make suggestions to the course material themselves, since you have <a href="how-to-teach&.html#8212;&#8203;publish-your-source">published your source</a>. Review their suggestions, and accept the best ones.</p>
+<p>make suggestions to the course material themselves, since you have <a href="#how-to-teach--publish-your-source">published your source</a>. Review their suggestions, and accept the best ones.</p>
 </li>
 <li>
-<p>answer the questions of other students on your <a href="how-to-teach&.html#8212;&#8203;publish-somewhere-people-can-comment">online forum</a>. Let them work instead of you.</p>
+<p>answer the questions of other students on your <a href="#how-to-teach--publish-somewhere-people-can-comment">online forum</a>. Let them work instead of you.</p>
 </li>
 </ul>
 </div>
@@ -4546,7 +4549,7 @@ xdg-open _site/index.html</pre>
 <p>Everything you want to teach is already online.</p>
 </div>
 <div class="paragraph">
-<p>And if it is not, then you are <a href="how-to-teach&.html#8212;&#8203;use-the-internet">wasting your time saying it face-to-face instead of creating such online resource</a>.</p>
+<p>And if it is not, then you are <a href="#how-to-teach--use-the-internet">wasting your time saying it face-to-face instead of creating such online resource</a>.</p>
 </div>
 <div class="paragraph">
 <p>The only goal of meeting students is talking to them individually or in small groups to:</p>
@@ -5565,7 +5568,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/e2ff3d02303fa721b35de55931d5056b9667943d">e2ff3d02303fa721b35de55931d5056b9667943d</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c5348bf332ed8ca1663be5e50b5166bdb483e448">c5348bf332ed8ca1663be5e50b5166bdb483e448</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
