7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7

--- a/oxford-nanopore-river-bacteria.html
+++ b/oxford-nanopore-river-bacteria.html
@@ -296,7 +296,7 @@ U-A-G-C-U-A-G-C     G
 <p>And, in the name of science, we even wore gloves to not contaminate the samples!</p>
 </div>
 <div class="paragraph">
-<p>Who said you can&#8217;t have fun with science? <a href="#video-river-water-sample-collection-with-a-bottle-and-string">Video  1, &#8220;River water sample collection with a bottle and string. <a href="https://commons.wikimedia.org/wiki/File:River_water_sample_collection_with_a_bottle_and_string.webm">Source</a>.&#8221;</a></p>
+<p>Who said you can&#8217;t have fun with science? <a href="#video-river-water-sample-collection-with-a-bottle-and-string">Video  1, &#8220;River water sample collection with a bottle and string. <a href="https://commons.wikimedia.org/wiki/File:River_water_sample_collection_with_a_bottle_and_string.ogv">Source</a>.&#8221;</a></p>
 </div>
 <div id="image-river-water-sample-collection-swans" class="imageblock">
 <div class="content">
@@ -335,7 +335,7 @@ U-A-G-C-U-A-G-C     G
 <div class="title">Figure 12. River water sample collection identify bottle. <a href="https://commons.wikimedia.org/wiki/File:River_water_sample_collection_identify_bottle.jpg">Source</a>.</div>
 </div>
 <div id="video-river-water-sample-collection-with-a-bottle-and-string" class="videoblock">
-<div class="title">Video  1. River water sample collection with a bottle and string. <a href="https://commons.wikimedia.org/wiki/File:River_water_sample_collection_with_a_bottle_and_string.webm">Source</a>.</div>
+<div class="title">Video  1. River water sample collection with a bottle and string. <a href="https://commons.wikimedia.org/wiki/File:River_water_sample_collection_with_a_bottle_and_string.ogv">Source</a>.</div>
 <div class="content">
 <video src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/bb/River_water_sample_collection_with_a_bottle_and_string.ogv/River_water_sample_collection_with_a_bottle_and_string.ogv.480p.vp9.webm" height="400" controls>
 Your browser does not support the video tag.
@@ -456,7 +456,7 @@ Your browser does not support the video tag.
 </div>
 </div>
 <div id="video-scientific-industries-inc-vortex-genie-2-running" class="videoblock">
-<div class="title">Video  5. Scientific Industries Inc Vortex-Genie 2 running. <a href="https://commons.wikimedia.org/wiki/File:Scientific_Industries_Inc_Vortex-Genie_2_running.webm">Source</a>.</div>
+<div class="title">Video  5. Scientific Industries Inc Vortex-Genie 2 running. <a href="https://commons.wikimedia.org/wiki/File:Scientific_Industries_Inc_Vortex-Genie_2_running.ogv">Source</a>.</div>
 <div class="content">
 <video src="https://upload.wikimedia.org/wikipedia/commons/transcoded/1/19/Scientific_Industries_Inc_Vortex-Genie_2_running.ogv/Scientific_Industries_Inc_Vortex-Genie_2_running.ogv.480p.vp9.webm" height="400" controls>
 Your browser does not support the video tag.
@@ -995,7 +995,7 @@ Your browser does not support the video tag.
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c5348bf332ed8ca1663be5e50b5166bdb483e448">c5348bf332ed8ca1663be5e50b5166bdb483e448</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7">7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
