--- a/x86-paging.html
+++ b/x86-paging.html
@@ -702,13 +702,13 @@ is[2] = 1;</pre>
 <p>It would be impractical to align things at 21 bytes since memory is addressable by bytes and not bits. Therefore, even in only 21 bits are needed in this case, hardware designers would probably choose 32 to make access faster, and just reserve bits the remaining bits for later usage. The actual value on x86 is 32 bits.</p>
 </div>
 <div class="paragraph">
-<p>Here is a screenshot from the Intel manual image "Formats of CR3 and Paging-Structure Entries with 32-Bit Paging" showing the structure of a page table in all its glory: <a href="#image-x86-page-entry-format">Figure 2, &#8220;x86 Page Entry format&#8221;</a>.</p>
+<p>Here is a screenshot from the Intel manual image "Formats of CR3 and Paging-Structure Entries with 32-Bit Paging" showing the structure of a page table in all its glory: <a href="#image-x86-page-entry-format">Figure 2, &#8220;x86 page entry format&#8221;</a>.</p>
 </div>
 <div id="image-x86-page-entry-format" class="imageblock">
 <div class="content">
-<a class="image" href="#image-x86-page-entry-format"><img src="x86-page-entry.png" alt="x86 page entry" height="300"></a>
+<a class="image" href="#image-x86-page-entry-format"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/x86_page_entry_format.png" alt="x86 page entry format" height="300"></a>
 </div>
-<div class="title">Figure 2. x86 Page Entry format</div>
+<div class="title">Figure 2. x86 page entry format</div>
 </div>
 <div class="paragraph">
 <p>The fields are explained in the manual just after.</p>
@@ -1112,7 +1112,7 @@ offset               = 0x4</pre>
 </div>
 <div id="image-x86-page-translation" class="imageblock">
 <div class="content">
-<a class="image" href="#image-x86-page-translation"><img src="x86-page-translation.png" alt="x86 page translation" height="300"></a>
+<a class="image" href="#image-x86-page-translation"><img src="https://raw.githubusercontent.com/cirosantilli/media/master/x86_page_translation_process.png" alt="x86 page translation process" height="300"></a>
 </div>
 <div class="title">Figure 3. x86 Page Translation</div>
 </div>
@@ -1808,7 +1808,7 @@ Text
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c5348bf332ed8ca1663be5e50b5166bdb483e448">c5348bf332ed8ca1663be5e50b5166bdb483e448</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7">7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
