--- a/adoc.html
+++ b/adoc.html
@@ -113,6 +113,9 @@ sqlite3 out/db.sqlite .dump</pre>
 <div class="paragraph">
 <p>Commented out test of a broken reference:</p>
 </div>
+<div class="paragraph">
+<p>Reference that includes the other file in the ToC:</p>
+</div>
 <div class="sect2">
 <h3 id="xref2-in-this-file"><a class="anchor" href="#xref2-in-this-file"></a><a class="link" href="#xref2-in-this-file">2.1. xref2 in this file</a></h3>
 
@@ -124,7 +127,7 @@ sqlite3 out/db.sqlite .dump</pre>
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c5348bf332ed8ca1663be5e50b5166bdb483e448">c5348bf332ed8ca1663be5e50b5166bdb483e448</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7">7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
