--- a/index.html
+++ b/index.html
@@ -2518,6 +2518,46 @@ xdg-open _site/index.html</pre>
 <div class="paragraph">
 <p>TODO: download all resources. Images are already half way because basically all already go through <code>image2</code>. But not sure I can mark external CSS and JavaScript easily on the HTML.</p>
 </div>
+<div class="paragraph">
+<p>Download all images download for development is already possible with;</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>CIROSANTILLI_COM_OFFLINE_DOWNLOAD=1 ./build</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>And after the download was done once before, generate output that uses the downloaded files instead of remote ones:</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>CIROSANTILLI_COM_OFFLINE_USE=1 ./build
+xdg-open _site/index.html</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>or when running the development server:</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>CIROSANTILLI_COM_OFFLINE_USE=1 ./run
+xdg-open http://localhost:4000</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>TODO: for some reason when I access <a href="oxford-nanopore-river-bacteria">How to use an Oxford Nanopore MinION to extract DNA from river water and determine which bacteria live in it</a> in offline mode on the browser at 7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7 + 1 I get a few messages:</p>
+</div>
+<div class="literalblock">
+<div class="content">
+<pre>[2019-10-06 23:23:28] ERROR Errno::ECONNRESET: Connection reset by peer @ io_fillbuf - fd:17
+     /home/ciro/.rvm/rubies/ruby-2.6.0/lib/ruby/2.6.0/webrick/httpserver.rb:82:in `eof?'
+     /home/ciro/.rvm/rubies/ruby-2.6.0/lib/ruby/2.6.0/webrick/httpserver.rb:82:in `run'
+     /home/ciro/.rvm/rubies/ruby-2.6.0/lib/ruby/2.6.0/webrick/server.rb:307:in `block in start_thread'</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Related: <a href="https://github.com/jekyll/jekyll/issues/6899" class="bare">https://github.com/jekyll/jekyll/issues/6899</a></p>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -5635,7 +5675,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7">7c119de0dcf263f5cd24ceb5e171a4bfd433c7e7</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/e00e2f0171769ba015659a334f24ccffdfd2c87e">e00e2f0171769ba015659a334f24ccffdfd2c87e</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
