dea07df9cc3f555644a77b2439a2846cc361a722

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 <p>Distro: latest Ubuntu release</p>
 </li>
 <li>
-<p>Vim or Emacs: Vim. But for The Love, will someone please make an open source C++ xref2:[IDE] that actually just works?</p>
+<p>Vim or Emacs: Vim. But for The Love, will someone please make an open source C++ <a href="#ide">IDE</a> that actually just works?</p>
 </li>
 <li>
 <p>Tabs or spaces: spaces</p>
@@ -4563,7 +4563,7 @@ xdg-open http://localhost:4000</pre>
 </div>
 </li>
 <li>
-<p>after you&#8217;ve done something awesome, xerf:google[] possible relevant keywords that should hit it.</p>
+<p>after you&#8217;ve done something awesome, <a href="#google">Google</a> possible relevant keywords that should hit it.</p>
 <div class="paragraph">
 <p>This will lead you to other websites that talk about the same content.</p>
 </div>
@@ -5547,7 +5547,7 @@ void main() {
 <p>Explains how it is possible that everyone observes the same speed of light, even if they are moving towards or opposite to the light!</p>
 </div>
 <div class="paragraph">
-<p>This was observed in in the href:michelson-morley-experiment[] which uses the movement of the Earth to try and detect differences in the speed of light.</p>
+<p>This was observed in in the <a href="#michelson-morley-experiment">Michelson-Morley experiment</a> which uses the movement of the Earth to try and detect differences in the speed of light.</p>
 </div>
 <div class="paragraph">
 <p>This leads leads to the following conclusions:</p>
@@ -5756,7 +5756,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/5c10315d41a2b75e7c432339c3200c04a2936bf0">5c10315d41a2b75e7c432339c3200c04a2936bf0</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/dea07df9cc3f555644a77b2439a2846cc361a722">dea07df9cc3f555644a77b2439a2846cc361a722</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
