ac7444dcf8093495f27bc1dc7124b436eb9abaa2

--- a/index.html
+++ b/index.html
@@ -5057,12 +5057,12 @@ xdg-open http://localhost:4000</pre>
 <p>awesome cross-platform proprietary <a href="https://en.wikipedia.org/wiki/JetBrains">JetBrains</a> IDEs</p>
 </li>
 <li>
-<p>the God-like Windows-only prorietary language lacking Visual Studio</p>
+<p>the God-like Windows-only prorprietary language lacking Visual Studio</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>Prgrammers of the world: unite! Focus on one IDE, and make it work for all languages and all bild systems. Give it all the features that Eclipse has, but none of the bugginess. Work with top project to make sure the IDE works for all top projects.</p>
+<p>Prgrammers of the world: unite! Focus on one IDE, and make it work for all languages and all build systems. Give it all the features that Eclipse has, but none of the bugginess. Work with top project to make sure the IDE works for all top projects.</p>
 </div>
 <div class="paragraph">
 <p>Projects of the world: support one IDE, with in-tree configuration. Complex integration is often required between the IDE and the build system, and sucessful projects must to that once for all developpers. Either do this, or watch you complex project wither away.</p>
@@ -5099,7 +5099,7 @@ xdg-open http://localhost:4000</pre>
 <p>Those two are languages not by any means perfect from a language design point of view, and there are likely already better alternatives, they are only chosen due to a pragmatic tradeoff between ecosystem and familiarity.</p>
 </div>
 <div class="paragraph">
-<p>Python in particular has a lot of annoying stuff, which other languages do better. Ciro predicts that Python will become like Fortran in the future: a legacy hated by most who have moved to JavScript long ago, but with too much dominance in certain applications like machine learning to be worth replacing, like Fortran dominates certain HPC applications.</p>
+<p>Python in particular has a lot of annoying stuff, which other languages do better. Ciro predicts that Python will become like Fortran in the future: a legacy hated by most who have moved to JavaScript long ago, but with too much dominance in certain applications like machine learning to be worth replacing, like Fortran dominates certain HPC applications.</p>
 </div>
 <div class="paragraph">
 <p>C++ however is decent, and is evolving in very good directions in the 2010&#8217;s, and will remain relavant in the forseable future.</p>
@@ -5756,7 +5756,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/dea07df9cc3f555644a77b2439a2846cc361a722">dea07df9cc3f555644a77b2439a2846cc361a722</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/ac7444dcf8093495f27bc1dc7124b436eb9abaa2">ac7444dcf8093495f27bc1dc7124b436eb9abaa2</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
