25ae94ff936ef2b5a8b6a020e391094b6f6b1dc8

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 <p>System or unit tests: system</p>
 </li>
 <li>
-<p>Default programming languages: Python and C++. <a href="#programming-languages">he&#8217;ll learn Rust and Haskell once he&#8217;s rich</a></p>
+<p>Default programming languages: Python and C++. <a href="#programming-languages">He&#8217;ll learn Rust and Haskell once he&#8217;s rich</a>.</p>
 </li>
 <li>
 <p>Favorite musical instruments to listen: <a href="#the-best-chinese-traditional-instrumental-music-albums-of-all-time">Chinese Guqin</a> and <a href="#the-best-music-albums-of-all-time">electric Jazz-fusion guitar</a></p>
@@ -557,7 +557,7 @@
 <p>The number two is <a href="https://stackoverflow.com/users/6309">VonC</a>, who has about 16 times more answers than Ciro in total! From this query: <a href="https://data.stackexchange.com/stackoverflow/query/1072396?&amp;Date=2019-07-01&amp;UserId=895245" class="bare">https://data.stackexchange.com/stackoverflow/query/1072396?&amp;Date=2019-07-01&amp;UserId=895245</a> it can be seen that as of July 2019, 1216 out of his 1329 answers were answered 60 days after the questions and constitute potential necromancers! Compare that to VonC&#8217;s 1643 potential necromancers out of 21767 answers!</p>
 </div>
 <div class="paragraph">
-<p>In terms of per year reputation ranks, Ciro was in the top 100 in 2018 with 38,710 reputation: <a href="https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4" class="bare">https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4</a> (<a href="http://web.archive.org/web/20191010120120/https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4">archive</a>). Note that daily reputation is mostly capped to 200 per day, leading to a maximum 73000 per year. It is possible to overcome this limit either with bounties or accepts, and Ciro find it amazing that some people actually break the 73k limit by far with accepts, e.g. <a href="https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange">Gordon Linoff reached 135k in 2018</a> (<a href="https://web.archive.org/web/20191011231423/https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange">archive</a>)! However, this is something that Ciro will never do, because it implies answering thousands and thousands of useless semi duplicate questions as fast as possible to get the accept. Ciro&#8217;s reputation is purely upvote on important question, and is therefore sustainable without any extra effort once achieved.</p>
+<p>In terms of per year reputation ranks, Ciro was in the top 100 in of the 2018 ranking with 38,710 reputation gained in that year: <a href="https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4" class="bare">https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4</a> (<a href="http://web.archive.org/web/20191013085259/https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange&amp;page=4">archive</a>). Note that daily reputation is mostly capped to 200 per day, leading to a maximum 73000 per year. It is possible to overcome this limit either with bounties or accepts, and Ciro find it amazing that some people actually break the 73k limit by far with accepts, e.g. <a href="https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange">Gordon Linoff reached 135k in 2018</a> (<a href="https://web.archive.org/web/20191013090451/https://stackexchange.com/leagues/1/year/stackoverflow/2018-01-01?sort=reputationchange">archive</a>)! However, this is something that Ciro will never do, because it implies answering thousands and thousands of useless semi duplicate questions as fast as possible to get the accept. Ciro&#8217;s reputation comes purely from upvotes on important question, and is therefore sustainable without any extra effort once achieved.</p>
 </div>
 <div class="paragraph">
 <p>Stack Overflow reputation is of course, in itself, meaningless. People who contribute to popular subjects like web development will always have infinitely more reputation that the low level subjects.</p>
@@ -732,7 +732,7 @@
 <p><a href="https://github.com/cirosantilli/breakthrough-message">Breakthrough Message</a>: aliens!!! Creative / media project, powered by some Python scripts.</p>
 </li>
 <li>
-<p>making Google Maps reviews of places he&#8217;s visited to help other people. Ciro&#8217;s photos reached 1 million views in 2019: <a href="https://www.google.com/maps/contrib/106598607405640635523/photos" class="bare">https://www.google.com/maps/contrib/106598607405640635523/photos</a> (<a href="http://web.archive.org/web/20190905081800/https://www.google.com/maps/contrib/106598607405640635523/photos:">archive</a>)</p>
+<p>making Google Maps reviews of places he&#8217;s visited to help other people. Ciro&#8217;s photos reached 1 million views in 2019: <a href="https://www.google.com/maps/contrib/106598607405640635523/photos" class="bare">https://www.google.com/maps/contrib/106598607405640635523/photos</a> (<a href="http://web.archive.org/web/20190905081800/https://www.google.com/maps/contrib/106598607405640635523/photos">archive</a>)</p>
 </li>
 </ul>
 </div>
@@ -3772,10 +3772,13 @@ xdg-open http://localhost:4000</pre>
 <p><a href="https://en.wikipedia.org/wiki/Mathematician" class="bare">https://en.wikipedia.org/wiki/Mathematician</a></p>
 </div>
 <div class="paragraph">
-<p>Poet, scientists and warriors all in one.</p>
+<p>Poet, scientists and warriors all in one? <a href="https://en.wikipedia.org/wiki/180_Degrees_South:_Conquerors_of_the_Useless">Conquerors of the useless</a>.</p>
 </div>
-<div class="paragraph">
-<p><a href="https://xkcd.com/435/" class="bare">https://xkcd.com/435/</a></p>
+<div id="image-xkcd-435" class="imageblock">
+<div class="content">
+<a class="image" href="#image-xkcd-435"><img src="https://web.archive.org/web/20190925220347if_/https://imgs.xkcd.com/comics/purity.png" alt="purity" height="400"></a>
+</div>
+<div class="title">Figure 7. xkcd 435. <a href="https://xkcd.com/435/">Source</a>.</div>
 </div>
 </div>
 </div>
@@ -5743,7 +5746,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
 <p>TODO mathematical detail. Is all we need to prove that if a given \(E(t, x, y, z)\) and \(B(t, x, y, z)\) are a solution to the maxwell equations in one frame, then \(E'(t', x', y', z')\) and \(B'(t', x', y', z')\) are also a solution in the other frame?</p>
 </div>
 <div class="paragraph">
-<p>This appears awesome: <a href="http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf" class="bare">http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf</a> (<a href="https://web.archive.org/web/20180920161243/http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf:">archive</a>) "David Tong: Lectures on Electromagnetism - 5. Electromagnetism and Relativity"</p>
+<p>This appears awesome: <a href="http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf" class="bare">http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf</a> (<a href="https://web.archive.org/web/20180920161243/http://www.damtp.cam.ac.uk/user/tong/em/el4.pdf">archive</a>) "David Tong: Lectures on Electromagnetism - 5. Electromagnetism and Relativity"</p>
 </div>
 <div class="ulist">
 <ul>
@@ -5781,7 +5784,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/fd778a23fea586aa670be8aa9ac5050c7e9e95c2">fd778a23fea586aa670be8aa9ac5050c7e9e95c2</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/25ae94ff936ef2b5a8b6a020e391094b6f6b1dc8">25ae94ff936ef2b5a8b6a020e391094b6f6b1dc8</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
