20e1fb261d3c15ba56c1df9b598c9d144e0c9c13

--- a/index.html
+++ b/index.html
@@ -2824,7 +2824,7 @@ xdg-open http://localhost:4000</pre>
 <p>Ciro has <a href="https://en.wikipedia.org/wiki/Synesthesia">olfactory synesthesia</a> for <a href="https://en.wikipedia.org/wiki/Illicium_verum">star anise (八角, bajiao)</a>, which is widely used in <a href="#chinese-cuisine">Chinese cuisine</a> and makes Ciro think uncontrollably of the color blue. Ciro does not have any other known synesthesias.</p>
 </div>
 <div class="paragraph">
-<p>Ciro is a reptilian-like being with cold hands and feet and low blood pressure. For this reason he believes that he will die of cancer or some respiratory problem. If the <a href="#ciro-santillis-campaign-for-freedom-of-speech-in-china">Chinese government</a> doesn&#8217;t get him first that is.</p>
+<p>Ciro is a reptilian-like being with cold hands and feet and low blood pressure. For this reason he believes that he will die of cancer or some respiratory problem. If the <a href="#ciro-santillis-campaign-for-freedom-of-speech-in-china">Chinese government</a> doesn&#8217;t get him first that is. This also partly explains why Ciro is not a big fan of swimming.</p>
 </div>
 <div class="paragraph">
 <p>Besides <a href="#chinese-cuisine">Chinese food</a>, Ciro really likes eating fruits and nuts, maybe partly because he was <a href="#ciro-santillis-biography">born in  Brazil</a>, and partly because of monkey nature, see <a href="#ciro-santilli">his Chinese name</a>. At home is is known as "水果大王" (the big king of the fruits).</p>
@@ -3007,7 +3007,7 @@ xdg-open http://localhost:4000</pre>
 </ul>
 </div>
 <div class="paragraph">
-<p>Could <a href="https://en.wikipedia.org/wiki/California" class="bare">https://en.wikipedia.org/wiki/California</a> be Ciro&#8217;s <a href="https://en.wikipedia.org/wiki/Mecca">Mecca</a>?</p>
+<p>Could <a href="https://en.wikipedia.org/wiki/California">California</a> be Ciro&#8217;s <a href="https://en.wikipedia.org/wiki/Mecca">Mecca</a>?</p>
 </div>
 </div>
 </div>
@@ -5086,7 +5086,7 @@ xdg-open http://localhost:4000</pre>
 <p>But like most poor countries, it does not have enough money or scientific culture to make technological or scientific advances.</p>
 </div>
 <div class="paragraph">
-<p>In order to get richer, Brazil should <a href="#having-more-than-one-natural-language-is-bad-for-the-world">teach it&#8217;s people English very well</a> and invest on projects that make education cheaper such as <a href="#write-free-books-to-get-famous-website">Write free books to get famous website</a>.</p>
+<p>In order to get richer, Brazil should <a href="#having-more-than-one-natural-language-is-bad-for-the-world">teach its people English very well</a> and invest on projects that make education cheaper such as <a href="#write-free-books-to-get-famous-website">Write free books to get famous website</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -6275,7 +6275,7 @@ c' &amp; = \frac{x_2' - x_1'}{t_2' - t_1'} \\
         <div>License: <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> unless noted</div>
         <div>Suggestions and corrections: <a href="https://github.com/cirosantilli/cirosantilli.github.io/issues">https://github.com/cirosantilli/cirosantilli.github.io/issues</a></div>
         <div>Website source code: <a href="https://github.com/cirosantilli/cirosantilli.github.io">https://github.com/cirosantilli/cirosantilli.github.io</a></div>
-        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/c42c456b090311d42be6b9548dbcaf7cc681876a">c42c456b090311d42be6b9548dbcaf7cc681876a</a></div>
+        <div>Website version: <a href="https://github.com/cirosantilli/cirosantilli.github.io/commit/20e1fb261d3c15ba56c1df9b598c9d144e0c9c13">20e1fb261d3c15ba56c1df9b598c9d144e0c9c13</a></div>
         <div>Cite with: <a href="https://zenodo.org/badge/latestdoi/16453261">this DOI</a></div>
     </footer>
     
